[package]
name = "yellow-rs"
version = "0.1.0"
authors = ["aura"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
kankyo = "0.2"
log = "0.4"
chrono = "0.4"
tokio = { version = "0.2", features = ["macros"] }
serenity = { git = "https://github.com/Lakelezz/serenity/", branch = "await" }
fasteval = "0.2.4"
regex= "1"
lazy_static = "1.4.0"
