[package]
name = "yellow-rs"
version = "0.1.0"
authors = ["aura"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
kankyo = "0.2"
log = "0.4"
chrono = "0.4"
tokio = { version = "0.2", features = ["macros"] }
serenity = { git = "https://github.com/Lakelezz/serenity/", branch = "await" }
regex= "1"
serde_json = "1.0.56"
futures = "0.3.5" #https://github.com/rust-lang/futures-rs

# For connect4
png = "0.11.0"
cairo-rs = { version="0.2.0", features = ["png"] }
reqwest = "0.10.7"
bytes = "0.5.6"

# DB
tokio-postgres = "0.5.5"

