[package]
name = "yellow-rs"
version = "0.1.1"
authors = ["Senre, MonliH"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serenity = "0.9.0-rc.0"
pretty_env_logger = "0.4"
kankyo = "0.3.0"
log = "0.4.11"
chrono = "0.4.15"
tokio = { version = "0.2.22", features = ["macros"] }
regex= "1"
serde_json = "1.0.57"
futures = "0.3.5" #https://github.com/rust-lang/futures-rs

# For connect4
png = "0.11.0"
cairo-rs = { version="0.2.0", features = ["png"] }
reqwest = "0.10.7"
bytes = "0.5.6"

# DB
tokio-postgres = { version="0.5.5", features = ["with-chrono-0_4"] }
byteorder = "1"
postgres-types = { version="0.1.2", features = ["derive"] }

[dependencies.serenity]
git = "https://github.com/acdenisSK/serenity"
branch = "await_next"
